# pureMeth

./: .gitignore  README.md  create_sample_sheet.py  create_samples_tsv.py  pyproject.toml  setup.py  test_create_sample_sheet.py  yaml.py
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml
examples/: example_usage.py
pureMeth/: .gitignore  __init__.py  utils.py
src/pureMeth/: __init__.py  utils.py
tests/: test_utils.py
